# temp-vedo

./: pyproject.toml
data/: 04b_spindle3aFI_cell.ply  Green_19weeks_Neuron4.CNG.swc  Neuron.swc
example/: example.py
vedotest/: airplane.py  generator.py  mesh_colormaps.py  model.py  neurom_example.py  swcsim.py  volume_from_mesh.py
